Fix review section title spacing

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -93,6 +93,7 @@ header p {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 50px 1fr;
+  grid-gap: 20px;
   padding: 10px;
   margin: 10px 0;
 }
